kubernetes/07_init-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init
  namespace: myapp
  labels:
    app: init
spec:
  containers:
  - image: mpgagebioinformatics/myapp:latest
    imagePullPolicy: Always
    name: init
    command: ["/myapp/services/init/entrypoint.sh"]
    securityContext:
      allowPrivilegeEscalation: false
      runAsUser: 0
    resources: {}
    volumeMounts:
    # - name: users-volume-mount
    #   mountPath: /myapp_data/users/
    - name: backup-volume-mount
      mountPath: /backup      
  restartPolicy: OnFailure
  imagePullSecrets:
    - name: dockerlogin
  volumes:
  # - name: users-volume-mount
  #   persistentVolumeClaim:
  #     claimName: users3-pvc
  - name: backup-volume-mount
    persistentVolumeClaim:
      claimName: bc-pvc

status: {}
