kubernetes/backup-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backup
  name: backup
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backup
  strategy: {}
  template:
    metadata:
      labels:
        app: backup
    spec:
      containers:
      - env:
        - name: APP_NAME
          value: myapp
        - name: APP_TITLE
          value: myapp
        - name: FLASK_ENV
          value: backup
        - name: MYSQL_HOST
          value: mariadb
        - name: MYSQL_PORT
          value: "3306"
        - name: MYSQL_PASSWORD
          valueFrom:
            secretKeyRef:
              name: myapp-secrets
              key: MYSQL_ROOT_PASSWORD
        - name: MYSQL_USER
          value: myapp
        - name: MAX_BACKUPS
          value: "15"
        - name: INIT_BACKUP
          value: "0"
        - name: CRON_TIME
          value: 44 13 * * *
        image: mpgagebioinformatics/myapp:latest
        imagePullPolicy: Always
        name: backup
        command: ["/myapp/services/backup/entrypoint.sh"]
        resources: {}
        volumeMounts:
          - name: db-backup-volume-mount
            mountPath: /backup/mariadb
      restartPolicy: Always
      imagePullSecrets:
        - name: dockerlogin
      volumes:
        - name: db-backup-volume-mount
          persistentVolumeClaim:
            claimName: db-bc-pvc
status: {}
