kubernetes/init-deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init
  labels:
    app: init
spec:
  containers:
  - image: mpgagebioinformatics/myapp:latest #hub.age.mpg.de/flaski/server
    imagePullPolicy: Always
    name: init
    command: ["/myapp/services/init/entrypoint.sh"]
    resources: {}
    volumeMounts:
    - name: users-volume-mount
      mountPath: /myapp_data/users/
    - name: db-backup-volume-mount
      mountPath: /backup/mariadb
  restartPolicy: OnFailure
  imagePullSecrets:
    - name: dockerlogin
  volumes:
  - name: users-volume-mount
    persistentVolumeClaim:
      claimName: users-pvc
  - name: db-backup-volume-mount
    persistentVolumeClaim:
      claimName: db-bc-pvc

status: {}
