kubernetes/09_server-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: server
  namespace: myapp
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 8000
      name: web
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: myapp
  labels:
    app: server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: mpgagebioinformatics/myapp:latest
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 8000
        resources: {}
        # volumeMounts:
        # - name: users-volume-mount
        #   mountPath: /myapp_data/users/
      restartPolicy: Always
      imagePullSecrets:
        - name: dockerlogin
      # volumes:
      # - name: users-volume-mount
      #   persistentVolumeClaim:
      #     claimName: users3-pvc
status: {}
