kubernetes/11_server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: server
  namespace: myapp
spec:
  rules:
  - host: myapp.minikube
    http:
      paths:
      - path: /
        backend:
          serviceName: server
          servicePort: web
